Dodanie funkcjonalności wizualizacji magazynu. 	W tabeli wyświetlane są najważniejsze informacje o paczkach. 	Na wykresie kołowym oraz na symbolu regału znajdują się informacje o zajętości danego regału.